Improvements to "Web interface" examples to be less reliant on specific perl version features. Additional improvements to handle utf-8 special characters properly in web-interface

--- a/elements-harvester/example-integrations/web-interface/cgi-scripts/css/logs.css
+++ b/elements-harvester/example-integrations/web-interface/cgi-scripts/css/logs.css
@@ -63,5 +63,5 @@ div.main-section.tail pre{
 END
 
 $q = CGI->new;
-print $q->header("text/css"),
+print $q->header("text/css;charset=UTF-8"),
       $newStyle;
