--- a/elements-harvester/example-integrations/web-interface/cgi-scripts/css/main.css
+++ b/elements-harvester/example-integrations/web-interface/cgi-scripts/css/main.css
@@ -75,5 +75,5 @@ div.main-section h1.disabled, div.main-section h2.disabled{
 END
 
 $q = CGI->new;
-print $q->header("text/css"),
+print $q->header("text/css;charset=UTF-8"),
       $newStyle;
